# mercury

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  PRD.md  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  dist-workspace.toml  install.sh
.agent/: project-guidelines.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/agents/: docusaurus.agent.md  docusaurus.md
.github/workflows/: add-to-project.yml  audit.yml  auto-docs.yml  auto-label.yml  ci.yml  deploy-docs.yml  release.yml  stale.yml  welcome.yml
scripts/: release.sh
src/: app.rs  components.rs  constants.rs  curl_parser.rs  env_parser.rs  http_parser.rs  insomnia_importer.rs  main.rs  panels.rs  persistence.rs  postman_importer.rs  request_executor.rs  theme.rs  types.rs  utils.rs
src/core/: constants.rs  error.rs  mod.rs  persistence.rs  request.rs  types.rs
src/importer/: insomnia.rs  mod.rs  postman.rs
src/parser/: curl.rs  env.rs  http.rs  mod.rs  request_file.rs
src/ui/: app.rs  components.rs  icons.rs  mod.rs  panels.rs  theme.rs
website/: docusaurus.config.ts  index.html  package-lock.json  package.json  sidebars.ts
website/docs/: faq.md  getting-started.md  performance.md  quickstart.md
website/docs/features/: auth.md  collections.md  cookies.md  environments.md  history.md  import-export.md  requests.md
website/docs/reference/: file-format.md  keyboard-shortcuts.md
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
