[package]
name = "mercury"
version = "0.1.0-beta"
edition = "2021"
description = "A fast, minimal API client for developers"
authors = ["Harshit Chaudhary <harrykumar.kp@gmail.com>"]
license = "MIT"
repository = "https://github.com/Harry-kp/mercury"
homepage = "https://github.com/Harry-kp/mercury"
keywords = ["api", "rest", "http", "client", "developer-tools"]
categories = ["development-tools", "network-programming"]

[dependencies]
eframe = "0.29"
egui = "0.29"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5"
walkdir = "2"
regex = "1"
rfd = "0.15"
image = "0.24"
open = "5"

[dev-dependencies]
tempfile = "3"

# Release optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Bundle configuration for cargo-bundle
[package.metadata.bundle]
name = "Mercury"
identifier = "com.mercury.app"
icon = ["assets/icon.icns"]
category = "Developer Tool"
short_description = "A fast, minimal API client"
long_description = """
Mercury is a fast, minimal API client for developers who value simplicity.
Built with Rust for native performance. No bloat, no subscriptions, no nonsense.
"""
