[package]
name = "mercury"
version = "0.2.0"
edition = "2021"
description = "A fast, minimal API client for developers"
authors = ["Harshit Chaudhary <harrykumar.kp@gmail.com>"]
license = "MIT"
repository = "https://github.com/Harry-kp/mercury"
homepage = "https://github.com/Harry-kp/mercury"
keywords = ["api", "rest", "http", "client", "developer-tools"]
categories = ["development-tools", "network-programming"]

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts", "accesskit"] }
egui = { version = "0.33", default-features = false, features = ["accesskit"] }
reqwest = { version = "0.12", features = ["json", "blocking", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "6"
walkdir = "2"
rfd = "0.16"
image = { version = "0.25", default-features = false, features = ["png"] }
open = "5"
notify = "8"
notify-debouncer-mini = "0.7"
base64 = "0.22.1"
thiserror = "2.0"
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
tempfile = "3"

# Release optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Bundle configuration for cargo-bundle
[package.metadata.bundle]
name = "Mercury"
identifier = "com.mercury.app"
icon = ["assets/icon.icns"]
category = "Developer Tool"
short_description = "A fast, minimal API client"
long_description = """
Mercury is a fast, minimal API client for developers who value simplicity.
Built with Rust for native performance. No bloat, no subscriptions, no nonsense.
"""
